# osu_zipifier

./: .gitignore  Cargo.toml  README.md
src/: beatmap_store.rs  lib.rs  main.rs  osu_api.rs  routes.rs
