[package]
name = "osu_zipifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5"
anyhow = "1"
bonsaidb = { version = "0.4", default-features = false, features = [
    "local-full",
] }
dotenvy = "0.15"
futures = "0.3"
once_cell = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = {version = "0.24", features = ["derive"]}
strum_macros = "0.24"
tokio = { version = "1.21", features = ["full"] }
tower = { version = "0.4", features = ["filter"]}
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
] }
reqwest-middleware = "0.1"
reqwest-retry = "0.1"
tryhard = "0.5"
zip = "0.6"
